Remove warnings raised by Java 9 compatibility
* Automatic-Module-Name
* Float constructor